# py-ocsf-models

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/: CODEOWNERS  dependabot.yml
.github/.workflows/: pull-request.yml
.github/scripts/: osv-scan.sh
.github/workflows/: pull-request.yml  pypi-release.yml  zizmor.yml
examples/: compliance_finding.py  detection_finding.py
py-ocsf-models/: test.py
py-ocsf-models/categories/findings/: detection.py
py-ocsf-models/events/: base_event.py
py-ocsf-models/events/findings/: detection_finding.py  finding.py
py-ocsf-models/objects/: account.py  api.py  cloud.py  container.py  device.py  device_hardware_info.py  dns_query.py  evidence_artifacts.py  finger_print.py  fingerprint.py  geolocation.py  group.py  image.py  kb_article.py  ldap_person.py  network_interface.py  observable.py  operating_system.py  organization.py  related_event.py  remediation.py  reputation.py  request_elements.py  resource_details.py  response_elements.py  service.py  user.py  vulnerability.py
py-ocsf-models/profiles/: cloud.py  container.py
py_ocsf_models/: __init__.py
py_ocsf_models/events/: base_event.py
py_ocsf_models/events/findings/: action_id.py  activity_id.py  application_security_posture_finding.py  application_security_posture_finding_type_id.py  category_uid.py  class_uid.py  compliance_finding.py  compliance_finding_type_id.py  confidence_id.py  detection_finding.py  detection_finding_type_id.py  disposition_id.py  finding.py  impact_id.py  priority_id.py  risk_level_id.py  severity_id.py  status_id.py
py_ocsf_models/objects/: account.py  actor.py  affected_software_package.py  analytic.py  api.py  assessment.py  authorization.py  check.py  cloud.py  compliance.py  compliance_status.py  container.py  cve.py  cvss.py  cwe.py  device.py  device_hardware_info.py  dns_query.py  enrichment.py  epss.py  evidence_artifacts.py  finding_info.py  fingerprint.py  firewall_rule.py  geolocation.py  group.py  image.py  kb_article.py  kill_chain_phase.py  ldap_person.py  malware.py  metadata.py  metric.py  mitre_attack.py  network_interface.py  observable.py  operating_system.py  organization.py  policy.py  product.py  (+11 more)
py_ocsf_models/profiles/: __init__.py  cloud.py  container.py  validators.py
tests/: application_security_posture_finding_test.py  compliance_finding_test.py  detection_finding_test.py
tests/events/: application_security_posture_finding_test.py  detection_finding_test.py
tests/objects/: test_ocsf_objects.py
tests/profiles/: test_profiles.py
