[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

# https://peps.python.org/pep-0621/
[project]
authors = [{name = "Prowler Engineering", email = "engineering@prowler.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "cryptography==44.0.1",
  "email-validator==2.2.0",
  "pydantic (>=2.9.2,<3.0.0)"
]
description = "This is a Python implementation of the OCSF models. The models are used to represent the data of the OCSF Schema defined in https://schema.ocsf.io/."
license = "Apache-2.0"
name = "py-ocsf-models"
packages = [
  {include = "py_ocsf_models"}
]
readme = "README.md"
requires-python = ">3.9.1,<3.14"
version = "0.4.0"

[project.urls]
"Changelog" = "https://github.com/prowler-cloud/py-ocsf-models/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/py-ocsf-models"
"Issue tracker" = "https://github.com/prowler-cloud/py-ocsf-models/issues"

[tool.mypy]
allow_redefinition = true
files = ["./py_ocsf_models"]
strict = true

[tool.poetry.group.dev.dependencies]
bandit = "1.8.3"
black = "25.1.0"
flake8 = "7.1.2"
mypy = "1.15.0"
pylint = "3.3.1"
pytest = "8.3.5"
pytest-cov = "6.0.0"
pytest-env = "1.1.5"
pytest-randomly = "3.16.0"
pytest-xdist = "3.6.1"
requests = "^2.32.3"
ruff = "0.11.0"
safety = "3.2.9"
vulture = "2.14"

[tool.poetry-version-plugin]
source = "init"
