[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

# https://peps.python.org/pep-0621/
[project]
authors = [{name = "Prowler Engineering", email = "engineering@prowler.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "cryptography==44.0.1",
  "email-validator==2.2.0",
  "pydantic (>=2.12.0,<3.0.0)"
]
description = "This is a Python implementation of the OCSF models. The models are used to represent the data of the OCSF Schema defined in https://schema.ocsf.io/."
license = "Apache-2.0"
name = "py-ocsf-models"
packages = [
  {include = "py_ocsf_models"}
]
readme = "README.md"
requires-python = ">3.9.1,<3.15"
version = "0.8.0"

[project.urls]
"Changelog" = "https://github.com/prowler-cloud/py-ocsf-models/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/py-ocsf-models"
"Issue tracker" = "https://github.com/prowler-cloud/py-ocsf-models/issues"

[tool.mypy]
allow_redefinition = true
files = ["./py_ocsf_models"]
strict = true

[tool.poetry.group.dev.dependencies]
# Security
bandit = "1.8.6"
# Linting & Formatting
mypy = "1.19.0"
# Testing
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-env = "1.1.5"
pytest-randomly = "4.0.1"
pytest-xdist = "3.8.0"
requests = "^2.32.4"
ruff = "0.14.7"
safety = "3.7.0"
# Code quality
vulture = "2.14"

[tool.poetry-version-plugin]
source = "init"

[tool.pytest.ini_options]
markers = [
  "external_api: marks tests that require external OCSF API (deselect with '-m \"not external_api\"')"
]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
ignore = [
  "E501"  # line too long (handled by formatter)
]
select = [
  "E",  # pycodestyle errors
  "W",  # pycodestyle warnings
  "F",  # pyflakes
  "I",  # isort
  "UP"  # pyupgrade
]

[tool.ruff.lint.isort]
combine-as-imports = true
split-on-trailing-comma = true
