[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=2.0"]

# https://peps.python.org/pep-0621/
[project]
authors = [{name = "Prowler Engineering", email = "engineering@prowler.com"}]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: Apache Software License"
]
dependencies = [
  "cryptography==46.0.5",
  "email-validator==2.2.0",
  "pydantic (>=2.12.0,<3.0.0)"
]
description = "This is a Python implementation of the OCSF models. The models are used to represent the data of the OCSF Schema defined in https://schema.ocsf.io/."
license = "Apache-2.0"
name = "py-ocsf-models"
packages = [
  {include = "py_ocsf_models"}
]
readme = "README.md"
requires-python = ">3.9.1,<3.15"
version = "0.8.0"

[project.urls]
"Changelog" = "https://github.com/prowler-cloud/py-ocsf-models/releases"
"Documentation" = "https://docs.prowler.cloud"
"Homepage" = "https://github.com/prowler-cloud/py-ocsf-models"
"Issue tracker" = "https://github.com/prowler-cloud/py-ocsf-models/issues"

[tool.mypy]
allow_redefinition = true
files = ["./py_ocsf_models"]
strict = true

[tool.poetry.group.dev.dependencies]
bandit = "1.8.6"
black = "25.11.0"
flake8 = "7.3.0"
mypy = "1.19.1"
pylint = "3.3.9"
pytest = "8.4.2"
pytest-cov = "7.0.0"
pytest-env = "1.1.5"
pytest-randomly = "4.0.1"
pytest-xdist = "3.8.0"
requests = "^2.32.4"
ruff = "0.15.0"
safety = "3.7.0"
vulture = "2.14"

[tool.poetry-version-plugin]
source = "init"
